# nexus

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/analysis/: engine.rs  mod.rs  parser.rs
src-tauri/src/analysis/extractors/: c.rs  go.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
src-tauri/src/commands/: analysis.rs  graph.rs  mod.rs  project.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/storage/: mod.rs  repository.rs  schema.rs
src/components/browser/: AnalysisPanel.tsx  ContextMenu.tsx  DropZone.tsx  FileTree.tsx  ProjectSelector.tsx  index.ts
src/components/graph/: GraphCanvas.tsx  GraphEdge.tsx  GraphNode.tsx  LayoutSwitcher.tsx  MiniMap.tsx  NodePopover.tsx  ViewModeSwitcher.tsx  ZoomControls.tsx  index.ts
src/components/search/: FilterPanel.tsx  SavedFilters.tsx  SearchBar.tsx  index.ts
src/components/shell/: AppShell.tsx  Inspector.tsx  Sidebar.tsx  Toolbar.tsx  index.ts
src/hooks/: index.ts  useFilteredGraph.ts  useKeyboardShortcuts.ts  useProjectActions.ts
src/lib/: tauri.ts
src/stores/: useAppStore.ts
src/types/: index.ts
tests/: setup.ts
tests/components/graph/: GraphCanvas.test.tsx  GraphEdge.test.tsx  GraphNode.test.tsx  LayoutSwitcher.test.tsx  MiniMap.test.tsx  ViewModeSwitcher.test.tsx  ZoomControls.test.tsx
tests/components/search/: FilterPanel.test.tsx  SavedFilters.test.tsx  SearchBar.test.tsx
tests/components/shell/: AppShell.test.tsx  Inspector.test.tsx  Toolbar.test.tsx
tests/hooks/: useFilteredGraph.test.ts  useKeyboardShortcuts.test.ts
tests/stores/: useAppStore.test.ts
